--- a/spring-05-thymeleaf/src/main/resources/templates/cart/show-cart.html
+++ b/spring-05-thymeleaf/src/main/resources/templates/cart/show-cart.html
@@ -33,7 +33,7 @@
                         <td th:text="${eachCartItem.getProduct().getName()}"></td>                          <!-- todo product variables-->
                         <td th:text="${eachCartItem.getQuantity()}"></td>
                         <td th:text="${eachCartItem.getTotalAmount().intValue()}"></td>                        <!-- todo product variables-->
-                        <td><a th:href="@{/delete (id=${eachCartItem.getProduct().getId()})}"  >Delete From Cart</a></td> <!-- todo implement delete get request-->
+                        <td><a th:href="@{/delete/{id}(id=${eachCartItem.getProduct().getId()})}"  >Delete From Cart</a></td> <!-- todo implement delete get request-->
                     </tr>
                     </tbody>
                 </table>
